# ipython_jupyter_notebook

./: 000002.csv  README.md  Untitled.ipynb  hello.py  matplotlib 样式和颜色.ipynb  matplotlib 绘制折线图.ipynb  matplotlib 绘制曲线图.ipynb  matplotlib_intro_001_直线图.ipynb  matplotlib_intro_002_numpy基础.ipynb  matplotlib_intro_003_散点图.ipynb  matplotlib_intro_004_折线图.ipynb  matplotlib_intro_005_条形图.ipynb  matplotlib_intro_006_直方图.ipynb  matplotlib_intro_007_饼图.ipynb  matplotlib_intro_008_箱型图.ipynb  matplotlib_intro_009_颜色和样式.ipynb  matplotlib_intro_010_0_面向对象与matlab style.ipynb  matplotlib_intro_010_1_作业 绘制正弦余弦图.ipynb  matplotlib_intro_010_2_作业 绘制正弦余弦图.ipynb  matplotlib_intro_011_subplot.ipynb  matplotlib_intro_012_多图figure.ipynb  matplotlib_intro_013_网格.ipynb  matplotlib_intro_014_图例legend.ipynb  matplotlib_intro_015_坐标轴范围.ipynb  matplotlib_intro_016_坐标轴刻度.ipynb  matplotlib_intro_017_添加坐标轴.ipynb  matplotlib_intro_017_添加注释.ipynb  matplotlib_intro_019_文字.ipynb  matplotlib_intro_020_Tex公式.ipynb  matplotlib_intro_021_工具栏.ipynb  matplotlib_intro_022_区域填充.ipynb  matplotlib_intro_023_形状.ipynb  matplotlib_intro_024_样式美化.ipynb  matplotlib_intro_025_极坐标.ipynb  matplotlib_intro_026&027_函数积分图.ipynb  matplotlib_intro_028&029_散点条形图.ipynb  matplotlib_intro_030&031_球员能力图.ipynb  matplotlib_intro_032&033_股票k线图.ipynb  matplotlib_intro_032&033_股票k线图.py  matplotlib_other_01.ipynb  (+8 more)
