[tool.poetry]
name = "jupyter"
version = "0.1.0"
description = ""
authors = ["hywell <opencoding@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scipy = "^1.4.1"
matplotlib = "^3.2.0"
pandas = "^1.0.1"
mpl_finance = "^0.10.1"
mplfinance = "^0.12.3-alpha.3"
mpl-finance = {url = "https://github.com/matplotlib/mpl_finance/archive/master.zip"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
